<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passsingin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_glevels"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="155dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_txt"
        android:backgroundTint="#00B599"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF" />


    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_txt"
        android:backgroundTint="#00B599"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="247dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView33"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/registred" />

    <TextView
        android:id="@+id/logNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_reg"
        android:layout_alignStart="@+id/btn_reg"
        android:layout_alignEnd="@+id/btn_reg"
        android:layout_marginStart="-82dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="-84dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="@string/loginNow"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="181dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="385dp" />

</RelativeLayout>