<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/mainOwl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView32"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/owl"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:id="@+id/start_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainOwl"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="129dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/start_btn_stroke_black95_press"
            android:fontFamily="@font/comfortaa_bold"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="472dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btn_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/Profile" />

</RelativeLayout>