<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passsingin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_glevels"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="Войти"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="251dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/style_txt"
        android:backgroundTint="#00B599"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/style_txt"
        android:backgroundTint="#00B599"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="257dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView33"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/style_txt"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/login" />

    <TextView
        android:id="@+id/regNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_log"
        android:layout_alignStart="@+id/btn_log"
        android:layout_alignEnd="@+id/btn_log"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-62dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="@string/registerNow"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="117dp" />


</RelativeLayout>